RESOLVED FIXED208141
WebProcessPool does not need a map of service worker processes keyed by domain+session
https://bugs.webkit.org/show_bug.cgi?id=208141
Summary WebProcessPool does not need a map of service worker processes keyed by domai...
youenn fablet
Reported 2020-02-24 08:55:17 PST
WebProcessPool does not to own a map of service worker processes keyed by domain+session
Attachments
Patch (17.00 KB, patch)
2020-02-24 09:07 PST, youenn fablet
no flags
Patch for landing (17.17 KB, patch)
2020-02-25 07:28 PST, youenn fablet
no flags
youenn fablet
Comment 1 2020-02-24 09:00:32 PST
Radar WebKit Bug Importer
Comment 2 2020-02-24 09:00:55 PST
Chris Dumez
Comment 3 2020-02-24 09:01:42 PST
Title is missing a verb I think
youenn fablet
Comment 4 2020-02-24 09:07:22 PST
Alex Christensen
Comment 5 2020-02-24 13:45:10 PST
Comment on attachment 391549 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=391549&action=review > Source/WebKit/ChangeLog:3 > + WebProcessPool does not a map of service worker processes keyed by domain+session does not need a
youenn fablet
Comment 6 2020-02-25 07:28:59 PST
Created attachment 391649 [details] Patch for landing
WebKit Commit Bot
Comment 7 2020-02-25 11:16:38 PST
Comment on attachment 391649 [details] Patch for landing Clearing flags on attachment: 391649 Committed r257365: <https://trac.webkit.org/changeset/257365>
WebKit Commit Bot
Comment 8 2020-02-25 11:16:39 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.