WebProcessPool does not need a map of service worker processes keyed by domain+session https://bugs.webkit.org/show_bug.cgi?id=208141

Reviewed by Alex Christensen.

It is not needed for the WebProcessPool to query the service worker process map in case of creation of a service worker process
since Network Process has all the information needed to decide whether to create a new process or not.

Network process is now telling UIProcess to terminate a service worker process based on its identifier instead of its domain+session.
This allows replacing the WebProcessPool service worker process map with an HashSet, which is both safer and more efficient to use.

No observable change.

* NetworkProcess/ServiceWorker/WebSWServerToContextConnection.cpp:
(WebKit::WebSWServerToContextConnection::syncTerminateWorker):
* UIProcess/Network/NetworkProcessProxy.cpp:
(WebKit::NetworkProcessProxy::terminateUnresponsiveServiceWorkerProcesses):
* UIProcess/Network/NetworkProcessProxy.h:
* UIProcess/Network/NetworkProcessProxy.messages.in:
* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::networkProcessCrashed):
(WebKit::WebProcessPool::establishWorkerContextConnectionToNetworkProcess):
(WebKit::WebProcessPool::removeFromServiceWorkerProcesses):
(WebKit::WebProcessPool::disconnectProcess):
(WebKit::WebProcessPool::createWebPage):
(WebKit::WebProcessPool::updateServiceWorkerUserAgent):
(WebKit::WebProcessPool::terminateServiceWorkers):
(WebKit::WebProcessPool::updateProcessAssertions):
(WebKit::WebProcessPool::isServiceWorkerPageID const):
(WebKit::WebProcessPool::setUseSeparateServiceWorkerProcess):
(WebKit::WebProcessPool::hasServiceWorkerForegroundActivityForTesting const):
(WebKit::WebProcessPool::hasServiceWorkerBackgroundActivityForTesting const):
(WebKit::WebProcessPool::terminateServiceWorkerProcess): Deleted.
* UIProcess/WebProcessPool.h:


Canonical link: https://commits.webkit.org/221138@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257365 268f45cc-cd09-0410-ab3c-d52691b4dbfc